--- a/PorcentajesDescuentos/descuentos.html
+++ b/PorcentajesDescuentos/descuentos.html
@@ -7,7 +7,23 @@
   <title>Porcentajes y descuentos</title>
 </head>
 <body>
-   <h1>Porcentajes y descuentos</h1>
+  <header>
+    <h1>Porcentajes y descuentos</h1>
+  </header>
+  <section>
+    <h1>Calcula el precio a pagar en tus productos con descuento</h1>
+
+    <form action="">
+      <label for="InputPrice">Escribe el precio de tu producto:</label>
+      <input id="InputPrice" type="number">
+      <label for="InputDiscount">Escribe el descuento de tu producto:</label>
+      <input id="InputDiscount" type="number">
+      <button type="button" onclick="onClickButtonPriceDiscount()">Calcular el precio de descuento</button>
+      <p id="ResultP"></p>
+    </form>
+
+
+  </section>
 
    <script src="./descuentos.js"></script>
 </body>
