Integrando html con js y función de agregar elementos

--- a/PromedioMedianaModa/promedio/promedio.html
+++ b/PromedioMedianaModa/promedio/promedio.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <h1>Promedio</h1>
+  <form action="">
+    <label for="salarios">Ingresa los salarios</label>
+    <input type="number" id="salarios">
+    <button type="button" onclick="agregarSalarios()">Ingresar salarios</button>
+    <button type="button" onclick="calcularPromedioSalarios()">Calcular promedio</button>
+    <p id="promedioSalida"></p>
+  </form>
+
+
   <script src="./promedio.js"></script>
 </body>
 </html>
