--- a/PromedioMedianaModa/mediana/mediana.html
+++ b/PromedioMedianaModa/mediana/mediana.html
@@ -8,8 +8,17 @@
 </head>
 <body>
   <header>
-    <h1>La Mediana</h1>
+    <h1>Calcula la Mediana de una lista de numeros</h1>
   </header>  
+  <main>
+    <form action="">
+      <label for="lista">Ingresar lista</label>
+      <input type="number" id="lista">
+      <button type="button" onclick="ingresarLista()">Ingresar lista</button>
+      <button type="button" onclick="calcularMedianaLista()">Calcular Mediana</button>
+      <p id="medianaSalida"></p>
+    </form>
+  </main>
 
   <script src="./mediana.js"></script>
 </body>
