--- a/figurasGeometricas/figuras.html
+++ b/figurasGeometricas/figuras.html
@@ -10,7 +10,13 @@
 <body>
   <header>
     <h1>Figuras Geométricas</h1>
-    <p>Primer taller del curso práctico de JavaScript</p>
+    <nav>
+      <ul  class="icon-figuras">
+        <li>
+          <a href=""></a>
+        </li>
+      </ul>
+    </nav>   
   </header>
   <main>
     <section class="main-cuadrado">
